--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,23 @@
 language: node_js
+sudo: required
+dist: trusty
+addons:
+  chrome: stable
+before_script:
+  - 'sudo chown root /opt/google/chrome/chrome-sandbox'
+  - 'sudo chmod 4755 /opt/google/chrome/chrome-sandbox'
+cache:
+  directories:
+    - ~/.npm
+notifications:
+  email: false
 node_js:
-  - "node"
+  - '10'
+  - '9'
+  - '8'
+  - '6'
+after_success:
+  - yarn travis-deploy-once "yarn semantic-release"
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
