--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "qunit-snapshot",
-  "version": "0.5.0",
+  "version": "0.0.0-development",
   "description": "A brand new TypeScript library.",
   "main": "dist/commonjs/src/index.js",
   "module": "dist/modules/src/index.js",
   "types": "dist/types/src/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mike-north/qunit-snapshot.git"
+  },
+  "author": {
+    "email": "michael.l.north@gmail.com",
+    "name": "Mike North",
+    "url": "https://mike.works"
+  },
   "ember-addon": {
     "main": "ember-addon.js"
   },
@@ -23,15 +32,32 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
+    "@commitlint/travis-cli": "^7.2.1",
     "@types/qunit": "^2.0.31",
     "ember-cli": "^3.1.4",
-    "libkit": "^0.7.0-beta.2",
+    "husky": "^1.1.3",
+    "libkit": "mike-north/libkit#ts-3",
     "qunit": "^2.4.1",
+    "semantic-release": "^15.10.7",
     "shelljs": "^0.7.8",
-    "tslint": "^5.7.0",
-    "typescript": "^2.4.2"
+    "travis-deploy-once": "^5.0.9",
+    "tslint": "^5.11.0",
+    "tslint-sonarts": "^1.8.0",
+    "typescript": "^3.1.6"
   },
   "dependencies": {
-    "ts-std": "^0.6.2"
+    "snap-shot": "^2.17.0"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "./node_modules/.bin/commitlint -e $HUSKY_GIT_PARAMS"
+    }
   }
 }
