--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ addons:
 before_script:
   - 'sudo chown root /opt/google/chrome/chrome-sandbox'
   - 'sudo chmod 4755 /opt/google/chrome/chrome-sandbox'
+  - npm install -g codecov
 cache:
   directories:
     - ~/.npm
@@ -17,6 +18,7 @@ node_js:
   - '8'
   - '6'
 after_success:
+  - codecov
   - yarn travis-deploy-once "yarn semantic-release"
 branches:
   except:
