--- a/package.json
+++ b/package.json
@@ -32,25 +32,28 @@
     "travis-deploy-once": "travis-deploy-once",
     "semantic-release": "semantic-release"
   },
-  "license": "MIT",
+  "license": "bsd-2-clause",
   "devDependencies": {
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/travis-cli": "7.2.1",
-    "@types/qunit": "2.5.3",
+    "@microsoft/api-extractor": "^6.1.1",
+    "@mike-north/types": "^1.0.7",
+    "@types/qunit": "^2.5.3",
     "ember-cli": "3.5.0",
     "husky": "1.1.3",
+    "json-typescript": "^1.0.1",
     "libkit": "mike-north/libkit#ts-3",
-    "qunit": "2.8.0",
     "semantic-release": "15.10.7",
     "shelljs": "0.7.8",
     "travis-deploy-once": "5.0.9",
     "tslint": "5.11.0",
-    "tslint-sonarts": "1.8.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-sonarts": "^1.8.0",
     "typescript": "3.1.6"
   },
   "dependencies": {
-    "snap-shot": "^2.17.0"
+    "qunit": "^2.8.0"
   },
   "commitlint": {
     "extends": [
