--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qunit-snapshot",
-  "version": "0.0.0-development",
+  "version": "0.0.1",
   "description": "A brand new TypeScript library.",
   "main": "dist/commonjs/src/index.js",
   "module": "dist/modules/src/index.js",
@@ -39,6 +39,7 @@
     "@commitlint/travis-cli": "7.2.1",
     "@microsoft/api-extractor": "^6.1.1",
     "@mike-north/types": "^1.0.7",
+    "@types/json-stable-stringify": "^1.0.32",
     "@types/qunit": "^2.5.3",
     "ember-cli": "3.5.0",
     "husky": "1.1.3",
@@ -53,6 +54,7 @@
     "typescript": "3.1.6"
   },
   "dependencies": {
+    "json-stable-stringify": "^1.0.1",
     "qunit": "^2.8.0"
   },
   "commitlint": {
