--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "travis-deploy-once": "travis-deploy-once",
     "semantic-release": "semantic-release"
   },
-  "license": "bsd-2-clause",
+  "license": "BSD-2-Clause",
   "devDependencies": {
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
@@ -66,5 +66,8 @@
     "hooks": {
       "commit-msg": "./node_modules/.bin/commitlint -e $HUSKY_GIT_PARAMS"
     }
+  },
+  "release": {
+    "extends": "@mike-north/js-lib-semantic-release-config"
   }
 }
