--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "husky": "1.1.3",
     "json-typescript": "1.0.1",
     "libkit": "mike-north/libkit#ts-3",
+    "nyc": "^13.1.0",
     "semantic-release": "15.10.7",
     "shelljs": "0.8.2",
     "travis-deploy-once": "5.0.9",
