--- a/package.json
+++ b/package.json
@@ -40,16 +40,17 @@
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/travis-cli": "7.2.1",
     "@microsoft/api-documenter": "1.5.50",
-    "@microsoft/api-extractor": "6.1.2",
+    "@microsoft/api-extractor": "6.1.1",
     "@mike-north/js-lib-semantic-release-config": "0.0.0-development",
     "@mike-north/types": "1.0.7",
     "@types/json-stable-stringify": "1.0.32",
     "@types/qunit": "2.5.3",
+    "codecov": "^3.1.0",
     "ember-cli": "3.5.0",
     "husky": "1.1.3",
     "json-typescript": "1.0.1",
     "libkit": "mike-north/libkit#ts-3",
-    "nyc": "13.1.0",
+    "nyc": "^13.1.0",
     "semantic-release": "15.10.7",
     "shelljs": "0.8.2",
     "travis-deploy-once": "5.0.9",
@@ -59,7 +60,6 @@
     "typescript": "3.1.6"
   },
   "dependencies": {
-    "json-stable-stringify": "^1.0.1",
     "qunit": "^2.8.0"
   },
   "commitlint": {
