--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["config:base"],
+  "extends": ["config:js-lib", ":pinOnlyDevDependencies"],
   "automerge": true,
   "major": {
     "automerge": false
