--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,38 @@ notifications:
   email: false
 
 node_js:
-  - '10'
   - '8'
 
-script:
-  - node_modules/.bin/nyc yarn test && yarn travis-deploy-once "yarn semantic-release"
+stages:
+  - 'Tests'
+  - name: 'Deploy'
+    if: branch = master AND type = push
 
-after_script:
-  - ./node_modules/.bin/codecov
+jobs:
+  fail_fast: true
+  include:
+    - stage: 'Tests'
+      name: 'Conventional Commits'
+      script: commitlint-travis
+    - name: 'Fixed Dependencies'
+      install: yarn install --non-interactive
+    - name: 'Floating Dependencies'
+      after_install: yarn global add codecov
+      script: node_modules/.bin/nyc yarn test
+      after_script: codecov
+
+    - stage: 'Deploy'
+      name: 'Publish to npm'
+      install:
+        - yarn install --non-interactive
+      script: yarn semantic-release
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+
+install:
+  - yarn install --no-lockfile --non-interactive
 
 branches:
   except:
